hphp/test/zend/good/zend/bug43851.php
<?php
foo();
function foo() {
	global $LAST;
	($LAST = $LAST + 0) * 1;
	echo "ok\n";
}
?>